Setting dialog height to fix shifting.

--- a/media/scss/lightbox-newui.scss
+++ b/media/scss/lightbox-newui.scss
@@ -456,6 +456,10 @@ input.text {
     }
 }
 
+.your-account-lightbox-content {
+    min-height: 566px;
+}
+
 .slidedeck-navBtns {
     bottom: 10px;
     position: absolute;
